// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block arguments 1`] = `{}`;

exports[`Block arguments 2`] = `
{
  "a": 1,
}
`;

exports[`Block arguments 3`] = `
{
  "a": 0,
  "b": 1,
  "c": 2,
}
`;

exports[`Block arguments 4`] = `
{
  "a": 0,
  "c": 2,
}
`;

exports[`Block arguments 5`] = `
[
  Provisioner {
    "blockNames": [
      "p1",
    ],
    "blockType": "provisioner",
    "type": "p1",
  },
  Provisioner {
    "blockNames": [
      "p2",
    ],
    "blockType": "provisioner",
    "type": "p2",
  },
]
`;

exports[`Block arguments 6`] = `[]`;
